<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Material-Demo</string>
    <string name="sample_text1">Sample Text 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition_main_activity">activityTransitionsImageView</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="placeholder_lorem_ipsum">This is some random text that I am writing just to populate some data into the view.</string>
    <string name="activity_transitions_title">Activity Transitions</string>
    <string name="imageViewTitle1">Image View 1 :</string>
    <string name="imageViewTitle2">Image View 2 :</string>
    <string name="textViewTransitionName">textViewTransition</string>
    <string name="main_activity">Main Activity</string>
    <string name="activity_transitions">Activity Transitions</string>
    <string name="reveal_demo">Reveal Demo</string>
    <string name="fab_demo">FAB Demo</string>
    <string name="reveal_demo_show_hide">ShowHide</string>
    <string name="placeholder_activity_transition_title">Demo Title</string>
    <string name="placeholder_activity_transition_subtitle">Demo Subtitle</string>
    <string name="description_share">Share</string>
    <string name="title_share">Share</string>

    <integer name="font_textStyle_medium">1</integer> <!-- bold -->
    <string name="title_activity_fab">FabActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="add">Add button</string>
    <string name="snackbar_demo">Snackbar Demo</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
        cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
        bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
        cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
        the big cheese.</string>
    <string name="coordinator_layout_demo">Coordinator Demo</string>

</resources>